--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2>How Much You Mean to Me</h2>
         <p>From the moment I met you, everything changed. My world became brighter, my heart fuller, and life more meaningful. You are my sunshine on cloudy days, my calm in the storm, and my reason to smile. Every little thing you do leaves me in awe.</p>
         <p>You mean the world to me, and every day I wake up grateful that I get to love you.</p>
-        <img src="C:\Users\olive\OneDrive\Documents\Vally\vally1.jpg" alt="Romantic Moment" class="image">
+        <img src="vally1.jpg" alt="Romantic Moment" class="image">
     </div>
 
     <!-- Section 2: Memories We've Made -->
