--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2>Memories We've Made</h2>
         <p>Our story is made up of countless beautiful moments – moments that, when I close my eyes, I relive like a dream.</p>
         <p>From our first date to the quiet moments of togetherness, each memory is etched in my heart forever.</p>
-        <img src="C:\Users\olive\OneDrive\Documents\Vally\vally2.jpg" alt="Memories" class="image">
+        <img src="https://github.com/OliverOkolo/Snow-White/blob/main/vally2.jpg" alt="Memories" class="image">
     </div>
 
     <!-- Section 3: Why I Love You -->
