--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2>Why I Love You</h2>
         <p>There are countless reasons why I love you, but here are just a few:</p>
         <p>1. Your Heart – Your kindness makes the world a better place.<br> 2. Your Strength – You face challenges with grace.<br> 3. Your Smile – When you smile, the whole world feels right.</p>
-        <img src="C:\Users\olive\OneDrive\Documents\Vally\vally3.jpg" alt="Reasons I Love You" class="image">
+        <img src="https://github.com/OliverOkolo/Snow-White/blob/main/vally3.jpg" alt="Reasons I Love You" class="image">
     </div>
 
     <!-- Section 4: Our Future -->
