--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="section" style="background-color: #ffe4e1;">
         <h2>Looking to Our Future</h2>
         <p>As I think about the future, I see you by my side through every step of the way. I can't wait for all the tomorrows we will share.</p>
-        <img src="C:\Users\olive\OneDrive\Documents\Vally\vally 4.jpg" alt="Future Together" class="image">
+        <img src="https://github.com/OliverOkolo/Snow-White/blob/main/vally%204.jpg" alt="Future Together" class="image">
     </div>
 
     <!-- Footer -->
