--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: rgb(222, 148, 192);
         }
         .hero {
-            background-image: url("vally1.jpg");
+            background-image: url("https://raw.githubusercontent.com/OliverOkolo/Snow-White/main/vally1.jpg");
             height: 100vh;
             background-size: cover;
             background-position: center;
@@ -68,31 +68,28 @@
     <div class="section" style="background-color: #fff5f7;">
         <h2>How Much You Mean to Me</h2>
         <p>From the moment I met you, everything changed. My world became brighter, my heart fuller, and life more meaningful. You are my sunshine on cloudy days, my calm in the storm, and my reason to smile. Every little thing you do leaves me in awe.</p>
-        <p>You mean the world to me, and every day I wake up grateful that I get to love you.</p>
-        <img src="vally1.jpg" alt="Romantic Moment" class="image">
+        <img src="https://raw.githubusercontent.com/OliverOkolo/Snow-White/main/vally1.jpg" alt="Romantic Moment" class="image">
     </div>
 
     <!-- Section 2: Memories We've Made -->
     <div class="section" style="background-color: #ffe4e1;">
         <h2>Memories We've Made</h2>
         <p>Our story is made up of countless beautiful moments – moments that, when I close my eyes, I relive like a dream.</p>
-        <p>From our first date to the quiet moments of togetherness, each memory is etched in my heart forever.</p>
-        <img src="https://github.com/OliverOkolo/Snow-White/blob/main/vally2.jpg" alt="Memories" class="image">
+        <img src="https://raw.githubusercontent.com/OliverOkolo/Snow-White/main/vally2.jpg" alt="Memories" class="image">
     </div>
 
     <!-- Section 3: Why I Love You -->
     <div class="section" style="background-color: #fff5f7;">
         <h2>Why I Love You</h2>
         <p>There are countless reasons why I love you, but here are just a few:</p>
-        <p>1. Your Heart – Your kindness makes the world a better place.<br> 2. Your Strength – You face challenges with grace.<br> 3. Your Smile – When you smile, the whole world feels right.</p>
-        <img src="https://github.com/OliverOkolo/Snow-White/blob/main/vally3.jpg" alt="Reasons I Love You" class="image">
+        <img src="https://raw.githubusercontent.com/OliverOkolo/Snow-White/main/vally3.jpg" alt="Reasons I Love You" class="image">
     </div>
 
     <!-- Section 4: Our Future -->
     <div class="section" style="background-color: #ffe4e1;">
         <h2>Looking to Our Future</h2>
         <p>As I think about the future, I see you by my side through every step of the way. I can't wait for all the tomorrows we will share.</p>
-        <img src="https://github.com/OliverOkolo/Snow-White/blob/main/vally%204.jpg" alt="Future Together" class="image">
+        <img src="https://raw.githubusercontent.com/OliverOkolo/Snow-White/main/vally4.jpg" alt="Future Together" class="image">
     </div>
 
     <!-- Footer -->
