--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="section" style="background-color: #ffe4e1;">
         <h2>Looking to Our Future</h2>
         <p>As I think about the future, I see you by my side through every step of the way. I can't wait for all the tomorrows we will share.</p>
-        <img src="https://raw.githubusercontent.com/OliverOkolo/Snow-White/main/vally4.jpg" alt="Future Together" class="image">
+        <img src="https://raw.githubusercontent.com/OliverOkolo/Snow-White/main/vally%204.jpg" alt="Future Together" class="image">
     </div>
 
     <!-- Footer -->
